backend/test_output.txt
/home/dan/Proyectos/BEFORE/Huertify/backend/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
prisma/e2e-stock-test.ts(56,13): error TS18047: 'initialStock' is possibly 'null'.
prisma/e2e-stock-test.ts(56,28): error TS18047: 'finalStock' is possibly 'null'.
prisma/e2e-stock-test.ts(59,73): error TS18047: 'initialStock' is possibly 'null'.
prisma/e2e-stock-test.ts(59,88): error TS18047: 'finalStock' is possibly 'null'.

    at createTSError (/home/dan/Proyectos/BEFORE/Huertify/backend/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/home/dan/Proyectos/BEFORE/Huertify/backend/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/home/dan/Proyectos/BEFORE/Huertify/backend/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/home/dan/Proyectos/BEFORE/Huertify/backend/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/home/dan/Proyectos/BEFORE/Huertify/backend/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Object.require.extensions.<computed> [as .ts] (/home/dan/Proyectos/BEFORE/Huertify/backend/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1091:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:164:12) {
  diagnosticCodes: [ 18047, 18047, 18047, 18047 ]
}
